    used instead of the PB INCLUDE directive.
  * Removed the Pyparsing based parser. There are now no required external library dependencies.
  * Unreferenced constants, strings, and tables are reported in the log.
  * Added cstr() and estr() macros to generate numeric strings with C character escapes and an optional NUL terminator.
  * Added qstr() macro to wrap macros in double quotes.
  * Added DATE_STAMP and TIME_STAMP macros for use within m4.
  * Add -D option to allow definition of m4 macros from the command line
  * Add automatic keep pragma to jump tables (2 or more consecutive unconditional jumps)
  
  Bug fixes
  ---------
  * Templates with multiple implementations containing larger memories than the memory map file would
    be generated with leftover {INIT...} fields. These are now filled in with assembled DEFAULT_JUMP
	instructions.
  * Spartan-3 XDL parsing in pb_update was not properly extracting the memory size parameters.
  * Nested for() loops had a bug that caused infinite looping.
  * Uppercase macros for shift and rotate operations were not working properly.
  * m4 complains about missing newline on the last line of a file. This has been eliminated.
  * Macro text inside quoted strings no longer expands.
  * Fixed leftover "const()" macros in commented out constant declarations.
  * Unicode text mode (cp65001) now works properly on Windows console. ANSI color does not work however.

v1.2 / 2014-12-12
=================

  Changes
  -------
  * Add static code analysis to identify dead code and optionally remove it
    ~ Suggested by Patrick Lehmann ~
  * New high-level macros: relational if(), for(), while(), dowhile(), named variables
  * C-style syntax for control flow macros: if(foo) { bar } else { baz }
  * PL360-style expressions including signed and unsigned mul/div among varying
    operand sizes
  * New cycle accurate delay macros
  * Add PRAGMA meta-comments with support for keeping dead code and arbitrary