@@ -7,10 +7,6 @@ _build
 build
 dist
 test
-ve
-
-x
-arith
 
 opbasm.egg-info
 no-dist
